worldprep: apply pre-merge foundation hardening